# random_tools

bag_extractor/: CMakeLists.txt  package.xml
bag_extractor/src/: bag_extractor_node.cc
cmake_fixes/openni2_camera/: CMakeLists.txt
error_fixes/: ugly_lz4_fix.txt
h_e_c/: calib.txt
launch_files/: export.launch
scripts/: change_permissions_for_all_files.sh  change_permissions_for_all_folders.sh  convert_to_ply  open_all_ply_files.sh  remove_data.sh
test_files/: pointcloud_to_ply.cpp
