<?xml version="1.0"?>
<package format="2">
  <name>bag_extractor</name>
  <version>0.0.0</version>
  <description> Package that extracts all the topics from a bag </description>

  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>
  <author>Tonci Novkovic</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>opencv3_catkin</depend>

  <depend>message_runtime</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>

</package>
